fixed footer on mobile

--- a/style.css
+++ b/style.css
@@ -17,19 +17,6 @@
       margin-top: -50px
     }
 
-    .footer {
-       width: 100%;
-       right: 0;
-       bottom: 0;
-       left: 0;
-       padding: 1rem;
-       height: 110px;   /* Height of the footer */
-       background-color: black;
-       position:absolute;
-       bottom: 0;
-       font-size: 0.8em;
-    }
-
 } /* end break point */
 
 h1 {
@@ -55,8 +42,16 @@ p {
   font-weight: lighter;
 }
 
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+
+
 body {
   position: relative;
+  margin: 0 0; /* bottom = footer height */
 }
 
 .uk-animation-fade {
@@ -156,23 +151,40 @@ text-align: center;
    bottom: 0;
    left: 0;
    padding: 1rem;
-   height: 110px;   /* Height of the footer */
    background-color: black;
    position:relative;
    bottom: 0;
    font-size: 0.8em;
 }
 
+#bottom-footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 120px;
+    width: 100%;
+    background-color: black;
+}
+
+#bottom-footer a {
+  text-decoration: underline;
+  color: white;
+}
+
 .footer a {
   text-decoration: underline;
   color: white;
+}
 
+
+#bottom-footer a:hover {
+  text-decoration: underline;
+  color: gray;
 }
 
 .footer a:hover {
   text-decoration: underline;
   color: gray;
-
 }
 
 .projects-header-container {
